@@ -1,3 +1,7 @@
+2017-11-30  Martin Pärtel <martin dot partel at gmail dot com>
+
+	* Added options --delete-deny and --rename-deny as suggested by @roojs.
+
 2017-10-26  Martin Pärtel <martin dot partel at gmail dot com>
 
 	* Released 1.13.8
